--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,13 +11,41 @@
 .top-side {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-name a {
+  color: #fafafa;
+  font-size: 16px;
+  text-decoration-line: none;
+}
+
+.create-room {
+  font-size: 10px;
+}
+
+.create-room a {
+  color: deepskyblue;
+  padding: 14px;
+  border: 1px solid lightblue;
 }
 
 .main-side {
   height: calc(100vh - 100px);
-  width: 300px;
   background-color: #2f3e51;
   padding: 0 20px;
+  overflow: scroll;
+}
+
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration-line: none;
+  color: white;
 }
 
 .chat {
