--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,8 @@
 <div class="top-chat">
   <div class="left-header">
-    <div class="group-name">hogefuga</div>
+    <div class="group-name">
+      <%= @room.name %>
+    </div>
   </div>
   <div class="left-header">
     <div class="chat-button"><a href="#">チャットを終了する</a></div>
