--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -5,7 +5,9 @@
     </div>
   </div>
   <div class="left-header">
-    <div class="chat-button"><a href="#">チャットを終了する</a></div>
+    <div class="chat-button">
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
+    </div>
   </div>
 </div>
 <div class="messages">
